# larsdoku-solver

./: .gitignore  LZWING_PAPER.md  README.md  RESEARCH_WITH_AI.md  SOUNDNESS_AUDIT.md  WXYZ_CASE_STUDY.md  __init__.py  cli.py  dxsudoku_103_larsdoku_result.md  forum_hardest_larsdoku.txt  forum_hardest_results.txt  mkdocs.yml  pyproject.toml  research.py  royle_17_hashes.json  royle_17_hashes.pkl
benchmarks/: run_top1465.py
docs/: api.md  benchmarks.md  cli-reference.md  cli.md  getting-started.md  how-it-works.md  hypersiro.md  index.md  lars-forge.md  puzzles.md  python-api.md  research.md  simple-wili.md  techniques.md
src/larsdoku/: __init__.py  bench.py  bitwise_engine.py  board_forge.py  cli.py  constants.py  engine.py  engine_ls.py  expert_669.py  forge.py  hardest_base_seeds.json  lars_forge.py  lars_seeds_l1_2step_part1.json  lars_seeds_l1_2step_part2.json  lars_seeds_l1_3step_part1.json  lars_seeds_l1_3step_part2.json  mask_forge.py  puzzles.py  reducer.py  research.py  seed_bank_128.json  seed_bank_64.json  simple_wili.py  siro_boost.py  sub17_solve.py  technique_seed_bank.json  top1465.py  verify_puzzles.py  wsrf_zone.py
tests/: test_oracle_free.py
