[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larsdoku"
version = "2.2.0"
description = "Pure logic Sudoku solver — 35 techniques, zero backtracking, 100% on Top1465"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Sir Lars"},
]
keywords = ["sudoku", "solver", "logic", "puzzle", "techniques"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "numba>=0.56",
]

[tool.setuptools.package-data]
larsdoku = ["seed_bank_64.json", "seed_bank_128.json", "zone_grid_db_full.json", "royle_17_hashes.json", "royle_17_hashes.pkl", "technique_seed_bank.json", "lars_seeds_part1.json", "lars_seeds_part2.json"]

[project.urls]
Homepage = "https://github.com/oppressionslayer/larsdoku-solver"
Documentation = "https://larsdoku-docs.netlify.app"
Repository = "https://github.com/oppressionslayer/larsdoku-solver"

[project.scripts]
larsdoku = "larsdoku.cli:main"
larsdoku-bench = "larsdoku.bench:main"
larsdoku-research = "larsdoku.research:main"

[tool.setuptools.packages.find]
where = ["src"]
